template/overlays/master/send-anything/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aion-sendanything
spec:
  template:
    spec:
      containers:
        - name: aion-sendanything
          env:
            - name: CLIENT_PORT
              value: "30100"
      volumes:
        - name: data
          hostPath:
            path: /var/lib/aion/default
      nodeSelector:
        kubernetes.io/hostname: _HOSTNAME_
