template/overlays/master/send-anything/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: aion-sendanything
  name: aion-sendanything
spec:
  selector:
    run: aion-sendanything
  type: NodePort
  ports:
    - name: envoy-grpc
      port: 10000
      nodePort: 32100
      protocol: TCP
      targetPort: 10000
  topologyKeys:
    - "kubernetes.io/hostname"
